# new_app

./: pyproject.toml  qrcode_create.py
