[tool.poetry]
name = "new_app"
version = "0.1.0"
description = ""
authors = ["TakayukiKomada <Takakoma.79@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
